subpages and wireframes page done, content added

--- a/about.html
+++ b/about.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>About Us</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/dark-mode.js"></script>
-    <script src="js/fake-send.js"></script>
 </head>
 <body>
     <header>
@@ -46,25 +45,29 @@
         </nav>
     </header>
     <main>
-         <div id="about-us-content">
-            <img src="https://via.placeholder.com/630x470.jpg">
+         <div id="about-us-intro">
+            <img src="assets\about\group.jpg" alt="Employee Group Photo">
             <div>
                 <h1>About Us</h1>
                 <p>
-                    <br>ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
-                    ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
-                    ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
-                    ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf</br>
+                    <br>Allen Ship Center was founded in June of 2010 by Jerry Maylor. Headquartered in Allen Texas, Allen Ship Center is a premier and distinguished expert in 
+                    international shipping. Since our founding we strive to serve residential and business customers in every sector. From the auto industry, furniture businesses, 
+                    clothing lines, heavy machinery manufactures, telecommunications industry, science centers, and every small business or personal shipper in between. We cover 
+                    it all!</br>
+                    <br>With partnerships with every major shipping provider from small parcel to full truck load (FTL) we can provide your company with the most efficient 
+                    shipping support to over 120,000 destinations worldwide, all at an amazing discount!</br>
+                    <br>We offer intelligent supply chain solutions, discounted shipping rates, and unmatched customer support with no minimum volume requirements. We are so 
+                    certain that you’ll love our service we allow you to ship at discounted rates without an account!</br>
                 </p>
             </div>
         </div>
         <h1 id="staff">Honored Staff</h1>
         <section class="cards">
             <div class="card" class="col-1">
-                <img src="https://via.placeholder.com/250x250.jpg" alt="Avatar">
+                <img src="assets\about\employee-1.jpg" alt="Jerry Maylor">
                 <div class="container">
-                  <h3><b>Empoyee 1</b></h3>
-                  <p>Profession/Role</p>
+                  <h3><b>Jerry Maylor</b></h3>
+                  <p>Founder</p>
                 </div>
             </div>
             <p class="col-2">
@@ -74,10 +77,10 @@
                 ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
             </p>
             <div class="card" class="col-1">
-                <img src="https://via.placeholder.com/250x250.jpg" alt="Avatar">
+                <img src="assets\about\employee-2.png" alt="Hollie Ellis">
                 <div class="container">
-                  <h3><b>Employee 2</b></h3>
-                  <p>Profession/Role</p>
+                  <h3><b>Hollie Ellis</b></h3>
+                  <p>Manager</p>
                 </div>
             </div>
             <p class="col-2">
@@ -87,10 +90,10 @@
                 ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
             </p>
             <div class="card" class="col-1">
-                <img src="https://via.placeholder.com/250x250.jpg" alt="Avatar">
+                <img src="assets\about\employee-3.png" alt="Tamara Harmony">
                 <div class="container">
-                  <h3><b>Employee 3</b></h3>
-                  <p>Profession/Role</p>
+                  <h3><b>Tamara Harmony</b></h3>
+                  <p>Customer Support</p>
                 </div>
             </div>
             <p class="col-2">
