--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main>
         <section id="home-content">
             <div id="welcome">
-                <h1>Welcome</h1>
+                <h1>Welcome!</h1>
                 <p>
                     <br>Thank you for stopping by the Allen Ship Center website today! Here you’ll find all of the 
                     information about what we do, how we do it, and how we can help make your shipping experience optimal.</br>
@@ -61,7 +61,7 @@
                 </p>
             </div>
             <div>
-                <img src="assets/home/ship.jpeg" id="index-1" alt="">
+                <img src="assets/home/ship.jpeg" id="index-1" alt="Packages on doorstep">
             </div>
             <div>
                 <h2>Our Deliveries</h2>
@@ -73,7 +73,8 @@
                 </p>
             </div>
             <div>
-                <img src="assets/home/curley-cue-designs.jpg" id="index-2" alt">
+                <img src="assets/home/curley-cue-designs.jpg" id="index-2" alt="Curley Cue Designs by Kyla Agnes">
+                <label>Owned by Kyla Agnes</label>
             </div>
             <div>
                 <h2>Local Gifts</h2>
@@ -81,7 +82,7 @@
                     ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
                     ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
                     ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
-                    ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib 
+                    ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib, 
                     <a href="subpage-2.html">click here</a>.
                 </p>
             </div>
