--- a/style-guide.html
+++ b/style-guide.html
@@ -6,7 +6,7 @@
         <meta name="keywords" content="Site, Planning, Style, Guide, WDD 130, Web Fundamentals, Courses, Material, Projects, Assignments, CIT, BYUI">
         <meta name="description" content="This is a homework assignment for WDD 130.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Site Planning - BYUI</title>
+        <title>Style Guide</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
