--- a/subpage-2.html
+++ b/subpage-2.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Local Gifts</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/dark-mode.js"></script>
-    <script src="js/fake-send.js"></script>
 </head>
 <body>
     <header>
@@ -46,7 +45,48 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section id="local-gifts">
+            <div id="gifts-intro">
+                <h1>Services</h1>
+                <p>
+                    jhqbruqiuweh qu uqheu qbwdu bqubduqbdu qwu bqudbuqw uiqwbndiqw uqb dubqfuyq wbd qwbd uqufbuf qub
+                </p>
+            </div>
+            <div id="gifts-list">
+                <div>
+                    <h2>KittyBunny Designs</h2>
+                    <p>
+                        This adorable couple makes the most adorable cards and other crafts as well, but here at the Allen Ship Center Center, we feature eight of 
+                        their cutest designs. The Johnstones are new to the world of selling their crafts, but have been creatives for a long, long time! We do hope you’ll 
+                        enjoy what they have to offer – and don’t forget, they can always make custom designs by request!
+                    </p>
+                </div>
+                <div>
+                    <img src="assets\subpage-2\kitty-bunny-designs.jpg" alt="Kitty Bunny Designs by Rachel and Scott Johnstone">
+                    <label>Owned by Rachel and Scott Johnstone</label>
+                </div>
+                <div>
+                    <h2>Ginger Felicity</h2>
+                    <p>
+                        jhqbruqiuweh qu uqheu qbwdu bqubduqbdu qwu bqudbuqw uiqwbndiqw uqb dubqfuyq wbd qwbd uqufbuf qub
+                    </p>
+                </div>
+                <div>
+                    <img src="assets\subpage-2\ginger-felicity.jpg" alt="Ginger Felicity by Lillian Bree">
+                    <label>Owned by Lillian Bree</label>
+                </div>
+                <div>
+                    <h2>Horse of Color</h2>
+                    <p>
+                        jhqbruqiuweh qu uqheu qbwdu bqubduqbdu qwu bqudbuqw uiqwbndiqw uqb dubqfuyq wbd qwbd uqufbuf qub
+                    </p>
+                </div>
+                <div>
+                    <img src="assets\subpage-2\horse-of-color.jpg" alt="Horse of Color by Edwin Verity">
+                    <label>Owned by Edwin Verity</label>
+                </div>
+            </div>
+            <p id="gifts-contact">If you are interested in becoming a consignee with Allen Ship Center, please <a href="contact-us.html">contact us</a>.</p>
         </section>
     </main>
     <footer>
