--- a/wireframes.html
+++ b/wireframes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Wireframes</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
@@ -46,7 +46,46 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section id="wireframes">
+                <div>
+                    <h1>Wireframes</h1>
+                </div>
+                <div class="wireframe">
+                    <a href="assets\wireframes\Home Page.png" target="_blank">
+                        <img src="assets\wireframes\Home Page.png" width="380" height="460" alt="Wireframe for Home page"></br>
+                        <label>Home Page</label></br>
+                    </a>
+                </div>
+                <div class="wireframe">
+                    <a href="assets\wireframes\Contact Us.png" target="_blank">
+                        <img src="assets\wireframes\Contact Us.png" alt="Wireframe for Contact Us page"></br>
+                        <label>Contact Us Page</label></br>
+                    </a>
+                </div>
+                <div class="wireframe">
+                    <a href="assets\wireframes\About Us.png" target="_blank">
+                        <img src="assets\wireframes\About Us.png" alt="Wireframe for About Us page"></br>
+                        <label>About Us Page</label></br>
+                    </a>
+                </div>
+                <div class="wireframe">
+                    <a href="assets\wireframes\Services.png" target="_blank">
+                        <img src="assets\wireframes\Services.png" alt="Wireframe for Services page"></br>
+                        <label>Services Page</label></br>
+                    </a>
+                </div>
+                <div class="wireframe">
+                    <a href="assets\wireframes\Local Gifts.png" target="_blank">
+                        <img src="assets\wireframes\Local Gifts.png" alt="Wireframe for Local Gifts page"></br>
+                        <label>Local Gifts Page</label></br>
+                    </a>
+                </div>
+                <div class="wireframe">
+                    <a href="assets\wireframes\Wireframes.png" target="_blank">
+                        <img src="assets\wireframes\Wireframes.png" alt="Wireframe for Wireframes page"></br>
+                        <label>Wireframes Page</label></br>
+                    </a>
+                </div>
 <!-- 
     wk 6 wireframe for home page
     wk 7 wireframe for 2 subpages
