--- a/subpage-1.html
+++ b/subpage-1.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Services</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/dark-mode.js"></script>
-    <script src="js/fake-send.js"></script>
 </head>
 <body>
     <header>
@@ -46,7 +45,95 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section id="services">
+            <div id="service-intro">
+                <h1>Services</h1>
+                <p>
+                    You can count on us to solve your office service problems. With office services like faxing, shredding, 
+                    copying, scanning, and printing located in Allen, Texas. You'll enjoy:
+                </p>
+            </div>
+            <div id="service-list">
+                <div class="left-column">
+                    <ul>
+                        <li>
+                            <span class="title">Affordable Services:</span><br> We make sure our services are reasonably priced for just about any sized job.
+                        </li>
+                    </ul>
+                </div>
+                <div class="right-column">
+                    <img src="assets\subpage-1\stamps.jpg" alt="Stamps">
+                </div>
+                <div class="left-column">
+                    <img src="assets\subpage-1\fax.jpeg" alt="Fax machine">
+                </div>
+                <div class="right-column">
+                    <li>
+                        <span class="title">Do It For You Service:</span><br> Nothing is more annoying than pushing a button you think will fax your letter, and making a copy of 
+                        it instead. Don’t worry – we’ll get it done for you. And we’ll give you a confirmation notice, too.
+                    </li>
+                </div>
+                <div class="left-column">
+                    <li>
+                        <span class="title">Receive It For You:</span><br> You can count on us to not only send faxes, but to get them for you as well. We can also print things 
+                        off of email and hold them for you at special request.
+                    </li>
+                </div>
+                <div class="right-column">
+                    <img src="assets\subpage-1\mailboxes.jpg" alt="Mailboxes">
+                </div>
+            </div>
+            <div>
+                <p>Our fax number is 555-555-5555. Feel free to give the number out to whomever and make sure they put your name and phone number on the cover page. 
+                We’ll make sure you get it as soon as we do.</p>
+            </div>
+            <div id="service-table">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Service</th>
+                            <th>Unit</th>
+                            <th>Price</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Copies (Color)</td>
+                            <td>Per one copy</td>
+                            <td>.45</td>
+                        </tr>
+                        <tr>
+                            <td>Copies (Black and White)</td>
+                            <td>Per one copy</td>
+                            <td>.10</td>
+                        </tr>
+                        <tr>
+                            <td>Scanning</td>
+                            <td>Per page</td>
+                            <td>.75</td>
+                        </tr>
+                        <tr>
+                            <td>Faxing</td>
+                            <td>Per page</td>
+                            <td>1.00</td>
+                        </tr>
+                        <tr>
+                            <td>Shredding</td>
+                            <td>Per pound</td>
+                            <td>1.00</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div>
+                <p>
+                <br>We have a pack-it-yourself station that has free shipping supplies for your needs. Stickers, tape, pens and pencils – all right there at your disposal. 
+                Best of all, we aren’t going to nickle and dime you for it. Just come on in and use as much as you need.</br>
+                <br>If packing shipments isn't your thing we have you covered! Your great-great grandmother’s beloved rocking chair is going to the next relative in the line. 
+                You want to ship your son your famous meat pie and cake for his birthday, but it needs to stay frozen. You want to send an iPad to your pappy for Christmas 
+                in the UK. No matter what unique situation you have we'll take care of it.</br>
+                </p>
+            </div>
         </section>
     </main>
     <footer>
