replaced placeholder text with appropriate content

--- a/about.html
+++ b/about.html
@@ -71,10 +71,10 @@
                 </div>
             </div>
             <p class="col-2">
-                uywgdiawh wandaihd bahrf a iabfiaobdnawhe aak aibdiw dba banwi  hwan iadiahdi dnawid akw uaidbiawbd awbd biw ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni biktr 
-                ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
-                ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
-                ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
+                Jerry is the man behind Allen Ship Center's mission to serve as the most accesible, cooperative, and helpful shipping center in the market. Growing up, Jerry 
+                would send letters and gifts to his extended family members, and he felt frustrated by how difficult shipment companies made it out to be. Now as a founder of one, 
+                he is determined to change that trend. Even after the company's establishment over ten years ago, Jerry is still heavily involved with the staff on location and is an essential 
+                leader over the team.
             </p>
             <div class="card" class="col-1">
                 <img src="assets\about\employee-2.png" alt="Hollie Ellis">
@@ -84,10 +84,8 @@
                 </div>
             </div>
             <p class="col-2">
-                uywgdiawh wandaihd bahrf a iabfiaobdnawhe aak aibdiw dba banwi  hwan iadiahdi dnawid akw uaidbiawbd awbd biw ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni biktr 
-                ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
-                ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
-                ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
+                Hollie has served as manager over Allen Ship Center's chain for well over four years which is longer than any other manager. She is essential in keeping staff 
+                motivated, welcomed, and focused; maintaining the location, and making important decisions that have brought Allen Ship Center further success. 
             </p>
             <div class="card" class="col-1">
                 <img src="assets\about\employee-3.png" alt="Tamara Harmony">
@@ -97,10 +95,9 @@
                 </div>
             </div>
             <p class="col-2">
-                uywgdiawh wandaihd bahrf a iabfiaobdnawhe aak aibdiw dba banwi  hwan iadiahdi dnawid akw uaidbiawbd awbd biw ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni biktr 
-                ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
-                ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
-                ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
+                Tamara currently works as Customer Support. She was particularly placed there for her stellar ability to resolve customer concerns and answer questions through 
+                her attentive listening and effective problem solving. It's this skillset that has landed her on Employee of the Month longer than any other employee. She is a 
+                prime example for Allen Ship Center's image and is the reason for our high customer satisfaction.
             </p>
         </section>
     </main>
