--- a/contact-us.html
+++ b/contact-us.html
@@ -50,10 +50,9 @@
             <div id="contact-us-intro">
                 <h1>Contact Us</h1>
                 <p>
-                    ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
-                    ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
-                    ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
-                    ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
+                    One of our biggest priorities at Allen Ship Center is to be as communitative to and supportive as possible to customers and collaborators. 
+                    If you have a question about what we do, or you'd like to work with us, you've come to the right place. Please fill the Contact form below, 
+                    and our excellent customer support division will be quick to respond and help you.
                 </p>
             </div>
             <form method="GET" action="contact-us.html" id="contact-form">
