--- a/index.html
+++ b/index.html
@@ -63,27 +63,23 @@
             <div>
                 <img src="assets/home/ship.jpeg" id="index-1" alt="Packages on doorstep">
             </div>
-            <div>
+            <div class="home-description">
                 <h2>Our Deliveries</h2>
                 <p>
-                    ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
-                    ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
-                    ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
-                    ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
+                    Need an item to have delivered to you? Consider choosing our service for the job! At Allen Ship Center, we put high emphasis on shipping a product to you as 
+                    fast and securely as possible. We'll have no issue getting the shipment to you to any part of the country you may be in.
                 </p>
             </div>
             <div>
                 <img src="assets/home/curley-cue-designs.jpg" id="index-2" alt="Curley Cue Designs by Kyla Agnes">
                 <label>Owned by Kyla Agnes</label>
             </div>
-            <div>
+            <div class="home-description">
                 <h2>Local Gifts</h2>
                 <p>
-                    ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
-                    ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
-                    ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
-                    ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib, 
-                    <a href="subpage-2.html">click here</a>.
+                   One of the most exciting aspects of what we do here is working with locals who want to deliver their gifts to all of you around the country. 
+                   We have collaborated with four creators to ship their designs, and we are open and wanting to include more! If you would like to view more of what we feature 
+                   from these creatives, <a href="subpage-2.html">click here</a>.
                 </p>
             </div>
         </section>
