--- a/subpage-2.html
+++ b/subpage-2.html
@@ -47,10 +47,7 @@
     <main>
         <section id="local-gifts">
             <div id="gifts-intro">
-                <h1>Services</h1>
-                <p>
-                    jhqbruqiuweh qu uqheu qbwdu bqubduqbdu qwu bqudbuqw uiqwbndiqw uqb dubqfuyq wbd qwbd uqufbuf qub
-                </p>
+                <h1>Local Gifts</h1>
             </div>
             <div id="gifts-list">
                 <div>
@@ -68,7 +65,8 @@
                 <div>
                     <h2>Ginger Felicity</h2>
                     <p>
-                        jhqbruqiuweh qu uqheu qbwdu bqubduqbdu qwu bqudbuqw uiqwbndiqw uqb dubqfuyq wbd qwbd uqufbuf qub
+                        These bath bombs are perfect for making your bathing experience like a tropical paradise. We offer four types with different fragrant smells. Lillian 
+                        had developed these lovely fizzies when she was only twelve years old. Talk about being innovative at such a young age!
                     </p>
                 </div>
                 <div>
@@ -78,7 +76,9 @@
                 <div>
                     <h2>Horse of Color</h2>
                     <p>
-                        jhqbruqiuweh qu uqheu qbwdu bqubduqbdu qwu bqudbuqw uiqwbndiqw uqb dubqfuyq wbd qwbd uqufbuf qub
+                        Everybody wants a bit of pazzazz put onto the writing and drawing utensils they use everyday, and Edwin has countless designs to satisfy that desire. 
+                        Pick from his large catalog, or request a custom design of your own. Edwin had been locally distributing these pencils and pens for more than a few years, but 
+                        he has recently considered us to ben the best choice to ship them to you across the country.
                     </p>
                 </div>
                 <div>
